manifest.prod.yml
apiVersion: v1
kind: Namespace
metadata:
  name: web-prod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: web-deployment
  name: web-deployment
  namespace: web-prod
spec:
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      run: web-deployment
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: web-deployment
    spec:
      containers:
        - image: patriciocostilla/webgo:latest
          imagePullPolicy: Always
          name: web-deployment
          ports:
            - containerPort: 8080
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: clusterip-web-service
  namespace: web-prod
spec:
  selector:
    run: web-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: web-prod
spec:
  rules:
    - http:
        paths:
          - path: /prod/foo
            pathType: Prefix
            backend:
              service:
                name: clusterip-web-service
                port:
                  number: 80
